--- a/public/PortfolioPro-Guide.html
+++ b/public/PortfolioPro-Guide.html
@@ -571,9 +571,14 @@
                         device.</p>
                 </div>
                 <div class="feature-box">
+                    <h3>Spreadsheet Backup</h3>
+                    <p>Tap <code>SPREADSHEET</code> to generate a beautifully formatted, encrypted Excel spreadsheet of
+                        your secure configuration.</p>
+                </div>
+                <div class="feature-box">
                     <h3>The Restore</h3>
-                    <p>Tap <code>RESTORE</code> and select a previous JSON backup to instantly rebuild your portfolio.
-                    </p>
+                    <p>Tap <code>RESTORE</code> and select a previous JSON or Spreadsheet backup to instantly rebuild
+                        your portfolio.</p>
                 </div>
             </div>
 
